# SONATA

./: README.md  parallel_features.py  pyproject.toml  run_sonata.py
docs/: REVIEW.md
examples/: quickstart.py
sonata/: __init__.py  attribution.py  baselines.py  cli.py  config.py  cv.py  diffusion_features.py  figures.py  fs_schaefer.py  gradients.py  graph.py  memory.py  model.py  noninferiority.py  parallel.py  persistence.py  reporting.py  roi_cache.py  spectral_features.py  tract_mapping.py  train.py  utils.py
sonata/backends/: __init__.py  array.py  base.py  bayes.py
sonata/viz/: __init__.py  brain3d.py  graphplot.py  heatmaps.py  metrics.py  panels.py  style.py
tests/: test_backends.py  test_memory.py  test_parallel.py  test_spectral_config.py  test_viz.py
